appId: com.ennio.example
name: 'TypeText Test'
---
- tapOn:
    text: 'Products'
- assertVisible:
    id: 'products-screen'
- tapOn:
    id: 'search-input'
- inputText: 'Wireless'
- assertVisible:
    text: 'Wireless'
