appId: com.ennio.example
---
- launchApp:
    clearState: true
- runFlow:
    file: subflows/navigate-cart.yaml
- assertVisible:
    id: 'cart-screen-empty'
- assertVisible:
    text: 'Your cart is empty'
- assertVisible:
    id: 'browse-products-btn'
- tapOn:
    id: 'browse-products-btn'
- assertVisible:
    id: 'products-list'
- tapOn:
    id: 'add-to-cart-1'
